--- a/style.css
+++ b/style.css
@@ -3,3 +3,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    --twitter-color: #50b7f5;
+    --twitter-background: #e6ecf0;
+}
+
+.sidebarOption {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.sidebarOption, .material-symbols-outlined, .fa-twitter {
+    padding: 20px;
+    /* background-color: pink;
+    color: red; */
+}
+
