--- a/style.css
+++ b/style.css
@@ -27,4 +27,9 @@ body {
     margin-right: 20px;
 }
 
-
+.sidebarOption:hover {
+    background-color: var(--twitter-background);
+    border-radius: 30px;
+    color: var(--twitter-color);
+    transition: color 100ms ease-out;
+}
