--- a/style.css
+++ b/style.css
@@ -33,3 +33,7 @@ body {
     color: var(--twitter-color);
     transition: color 100ms ease-out;
 }
+
+.sidebarOption.active {
+    color: var(--twitter-color);
+}
