styled body and that reigned in the tweet button that used to go across the entire page

--- a/style.css
+++ b/style.css
@@ -37,3 +37,23 @@ body {
 .sidebarOption.active {
     color: var(--twitter-color);
 }
+
+.sidebar__tweet {
+    width: 100%;
+    background-color: var(--twitter-color);
+    border: none;
+    color: white;
+    font-weight: 900;
+    border-radius: 30px;
+    height: 50px;
+    margin-top: 20px;
+}
+
+body {
+    display: flex;
+    height: 100vh;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 10px;
+}
