started Feed section with Home header

--- a/style.css
+++ b/style.css
@@ -71,3 +71,8 @@ body {
     color: var(--twitter-color);
     font-size: 30px;
 }
+
+/* stop here for the night 7/1/24 10:30ish pm */
+
+/* feed */
+
