general feed styling added

--- a/style.css
+++ b/style.css
@@ -76,3 +76,9 @@ body {
 
 /* feed */
 
+.feed {
+    flex: .5;
+    border-right: 1px solid var(--twitter-background);
+    min-width: fit-content;
+    overflow-y: scroll;
+}
