--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     --twitter-background: #e6ecf0;
 }
 
+/* sidebar starts */
+
 .sidebarOption {
     display: flex;
     align-items: center;
@@ -72,9 +74,10 @@ body {
     font-size: 30px;
 }
 
+/* sidebar ends */
 /* stop here for the night 7/1/24 10:30ish pm */
 
-/* feed */
+/* feed starts */
 
 .feed {
     flex: .5;
@@ -107,3 +110,11 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+/* feed ends */
+
+/* tweetbox starts*/
+
+
+
+/* tweetbox ends*/
