--- a/style.css
+++ b/style.css
@@ -115,6 +115,33 @@ body {
 
 /* tweetbox starts*/
 
+.tweetbox__input img {
+    border-radius: 50%;
+    height: 40px;
+}
 
+.tweetBox {
+    padding-bottom: 10px;
+    border-bottom: 8px solid var(--twitter-background);
+    padding-right: 10px;
+}
+
+.tweetBox form {
+    display: flex;
+    flex-direction: column;
+}
+
+.tweetbox__input {
+    display: flex;
+    padding: 20px;
+}
+
+.tweetbox__input input {
+    flex: 1;
+    margin-left: 20px;
+    font-size: 20px;
+    border: none;
+    outline: none;
+}
 
 /* tweetbox ends*/
