styled post__avatar and had same issue of img not inheriting traits from parent, per the tutorial code. So we added the img selector after the class and it worked! will also include a comment explaining the discrepancy

--- a/style.css
+++ b/style.css
@@ -158,7 +158,11 @@ body {
 
 /* post starts (feed) */
 
-
+.post__avatar img {
+    border-radius: 50%;
+    height: 40px;
+}
+/* the above is a slight diversion from tutorial - the img wasn't accepting the class from its parent div, so after some debugging we added the img selector to this class. */
 
 /* post ends (feed) */
 /* feed ends */
