--- a/style.css
+++ b/style.css
@@ -164,5 +164,18 @@ body {
 }
 /* the above is a slight diversion from tutorial - the img wasn't accepting the class from its parent div, so after some debugging we added the img selector to this class. */
 
+.post {
+    display: flex;
+    align-items: flex-start;
+    border-bottom: 1px solid var(--twitter-background);
+    padding-bottom: 10px;
+}
+
+.post__body img {
+    width: 450px;
+    object-fit: contain;
+    border-radius: 20px;
+}
+
 /* post ends (feed) */
 /* feed ends */
