added styling for post__footer icons

--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ body {
 
 .post__footer {
     display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
 }
 
 /* post ends (feed) */
