--- a/style.css
+++ b/style.css
@@ -189,6 +189,12 @@ body {
     margin-right: 5px;
 }
 
+.post__headerSpecial {
+    font-weight: 600;
+    font-size: 12px; 
+    color: gray;
+}
+
 /* UGH this is NOT a great stopping point but we need to get read for real work and feed Dash. SO what' happening is that I altered the spans to test what it meant to have them embedded, AND the Material classes are DIFFERENT in this iteration b/c I found the filled in ones. ugh.  So anyway, that's the situation and I don't quite have the next step planned but we gotta walk away now for life purposes.  boo.  */
 
 /* restarting on 7/9/24 */
