--- a/style.css
+++ b/style.css
@@ -200,6 +200,25 @@ body {
     color: gray;
 }
 
+.post__headerText h3 {
+    font-size: 15px;
+    margin-bottom: 5px;
+}
+
+.post__headerDescription {
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.post__body {
+    flex: 1;
+    padding: 10px;
+}
+
+.post__avatar {
+    padding: 20px;
+    
+}
 
 /* post ends (feed) */
 /* feed ends */
