widget column at flex: .3 so it's always 1/3 of the screen

--- a/style.css
+++ b/style.css
@@ -217,8 +217,16 @@ body {
 
 .post__avatar {
     padding: 20px;
-    
+
 }
 
 /* post ends (feed) */
 /* feed ends */
+
+/* widget starts */
+
+.widgets {
+    flex: .3;
+}
+
+/* widget ends */
