--- a/style.css
+++ b/style.css
@@ -229,4 +229,14 @@ body {
     flex: .3;
 }
 
+.widgets__input {
+    display: flex;
+    align-items: center;
+    background-color: var(--twitter-background);
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
 /* widget ends */
