--- a/style.css
+++ b/style.css
@@ -239,4 +239,10 @@ body {
     margin-left: 20px;
 }
 
+.widgets__input input {
+    border: none;
+    background-color: var(--twitter-background);
+    
+}
+
 /* widget ends */
