took away the outline of the search bar.  Like, dang that's all it is and it looks super slick.

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body {
 .widgets__input input {
     border: none;
     background-color: var(--twitter-background);
-    
+    outline: none;
 }
 
 /* widget ends */
