also in comments in CSS: just finished the tutoriallove it. maybe won't deploy it just yet, but def want to try linking up a javascript file and using this interface to play with JS (per that podcast Develop Yourself number150

--- a/style.css
+++ b/style.css
@@ -260,7 +260,10 @@ body {
 .widgets__widgetContainer h2 {
     font-size: 18px;
     font-weight: 800;
-
 }
 
+
+/* 7/10/24 10:50pm
+just finished the tutorial!  love it. 
+maybe won't deploy it just yet, but def want to try linking up a javascript file and using this interface to play with JS (per that podcast we heard today)*/
 /* widget ends */
